--- a/configs/softmax_triplet.yml
+++ b/configs/softmax_triplet.yml
@@ -1,16 +1,16 @@
 MODEL:
   PRETRAIN_CHOICE: 'imagenet'
-  PRETRAIN_PATH: '/mnt/CEPH_YIGO4/perception/g0/weidong.shi/workspace/ReID/resnet50-19c8e357.pth'
+  PRETRAIN_PATH: '/home/weidong.shi1/data/resnet50_ibn_a.pth.tar'
   METRIC_LOSS_TYPE: 'triplet'
   IF_LABELSMOOTH: 'on'
   IF_WITH_CENTER: 'no'
-
+  IF_WITH_CLOSS: 'off'
 
 
 
 INPUT:
-  SIZE_TRAIN: [256, 128]
-  SIZE_TEST: [256, 128]
+  SIZE_TRAIN: [384, 128]
+  SIZE_TEST: [384, 128]
   PROB: 0.5 # random horizontal flip
   # RE_PROB: 0.5 # random erasing
   PADDING: 10
@@ -25,7 +25,7 @@ DATALOADER:
 
 SOLVER:
   OPTIMIZER_NAME: 'Adam'
-  MAX_EPOCHS: 80
+  MAX_EPOCHS: 120
   BASE_LR: 0.00035
 
   CLUSTER_MARGIN: 0.3
@@ -42,18 +42,18 @@ SOLVER:
   BIAS_LR_FACTOR: 1
   WEIGHT_DECAY: 0.0005
   WEIGHT_DECAY_BIAS: 0.0005
-  IMS_PER_BATCH: 32
+  IMS_PER_BATCH: 64
 
-  STEPS: [30, 50]
+  STEPS: [40, 70]
   GAMMA: 0.1
 
   WARMUP_FACTOR: 0.01
   WARMUP_ITERS: 10
   WARMUP_METHOD: 'linear'
 
-  CHECKPOINT_PERIOD: 3
+  CHECKPOINT_PERIOD: 10
   LOG_PERIOD: 20
-  EVAL_PERIOD: 80
+  EVAL_PERIOD: 120
 
 TEST:
   IMS_PER_BATCH: 128
